@@ -1,6 +1,7 @@
 Changelog 1.0.0.3
 -----------------
 [NO-TICKET] Changed the fullscreen info key from "enter" to "info-key"
+[NO-TICKET] Sally: corrected the mouse handling of the CRating control
 
 
 Changelog 1.0.0.2
